# money

./: .gitignore  .pre-commit-config.yaml  12.html  PROJECT.md  README.md  REQUIREMENTS.md  docker-compose.yml  money.pen  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  FIXES.md  alembic.ini  pyproject.toml  requirements.txt  run.py  test_parser.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_categories.py  003_parser_config.py  004_add_is_admin.py  005_use_enum_types.py  006_fix_nullability.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  transactions.py  upload.py
backend/app/core/: config.py  database.py  security.py
backend/app/db/: models.py
backend/app/parsers/: alipay.py  base.py  config.py  parser.py  wechat.py
backend/app/schemas/: transaction.py
backend/app/services/: parser_config.py  transaction.py
backend/scripts/: init_db.sh
backend/tests/: conftest.py  test_parsers.py  test_security.py  test_timezone.py
prisma/: schema.prisma
prisma/migrations/20260513152903_init/: migration.sql
src/app/: layout.tsx
src/app/analytics/: page.tsx
src/app/api/analytics/monthly/: route.ts
src/app/api/import/commit/: route.ts
src/app/api/import/parse/: route.ts
src/app/api/transactions/: route.ts
src/app/import/: page.tsx
src/app/transactions/: page.tsx
src/components/: nav.tsx
src/lib/: db.ts  types.ts
src/lib/parsers/: alipay.ts  detect.ts  index.ts  wechat.ts
